# Molly-Devices

./: .gitignore  CMakeLists.txt  README.md  create_fat_image.py  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.old
.github/: copilot-instructions.md
.vscode copy/: launch.json  settings.json
components/app_logic/: CMakeLists.txt  app_events.h  app_logic.c  app_logic.h
components/bsp/: CMakeLists.txt  bsp_button.c  bsp_lcd.c  bsp_motor.c  bsp_uart_for_ml307.c
components/bsp/include/: bsp_button.h  bsp_lcd.h  bsp_motor.h  bsp_uart_for_ml307.h
components/button/: CMakeLists.txt  button.c  button.h
components/espressif__esp_lcd_gc9a01/: CMakeLists.txt  esp_lcd_gc9a01.c
components/espressif__esp_new_jpeg/: CMakeLists.txt
components/event_manager/: CMakeLists.txt  event_manager.c  event_manager.h
components/feature_4g_ml307/: CMakeLists.txt  README.md  feature_4g_ml307.cpp  feature_4g_ml307.h
components/feature_4g_ml307/include/: feature_4g_ml307.h
components/feature_anim_player/: CMakeLists.txt  feature_anim_player.c  feature_anim_player.h
components/feature_button/: CMakeLists.txt  feature_button.c  feature_button.h
components/feature_buzzer/: CMakeLists.txt
components/feature_input_handler/: CMakeLists.txt  feature_input_handler.c  feature_input_handler.h
components/feature_motor/: CMakeLists.txt  feature_motor.c  feature_motor.h
components/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  main.c
